Project

General

Profile

Actions

Bug #12777

closed

NoMethodError: undefined method `garbage_collect' for GC:Module

Bug #12777: NoMethodError: undefined method `garbage_collect' for GC:Module

Added by znz (Kazuhiro NISHIYAMA) about 10 years ago. Updated about 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:77327]

Description

RDoc says GC.garbage_collect is equal to GC.start. But GC.garbage_collect is a normal method. It is not a singleton method.
So GC.garbage_collect raises NoMethodError: undefined method `garbage_collect' for GC:Module.
Which is expected behavior?

Actions

Also available in: PDF Atom